--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "eliza",
+    "name": "mentora_agent",
     "scripts": {
         "preinstall": "npx only-allow pnpm",
         "build": "turbo run build --filter=!eliza-docs",
