--- a/.env.example
+++ b/.env.example
@@ -83,3 +83,7 @@ AWS_S3_UPLOAD_PATH=
 
 # Deepgram
 DEEPGRAM_API_KEY=
+
+# Dify Configuration
+DIFY_API_KEY=                     # API key from Dify.ai
+DIFY_BASE_URL=                    # Optional: Base URL for Dify API (defaults to http://app.dify.superagentai.online/v1)
